y.output
Terminals unused in grammar

   '!'


Grammar

    0 $accept: S $end

    1 S: ST

    2 ST: FOR '(' E ';' E2 ';' E ')' DEF
    3   | FOR '(' ';' ';' ')' DEF
    4   | FOR '(' E ';' ';' ')' DEF
    5   | FOR '(' ';' E2 ';' ')' DEF
    6   | FOR '(' ';' ';' E ')' DEF

    7 DEF: '{' '}'
    8    | '{' BODY '}'
    9    | E ';'
   10    | ST
   11    | ID ID ';'
   12    | ';'

   13 BODY: BODY ST
   14     | BODY E ';'
   15     | ST
   16     | E ';'
   17     | BREAK ';'
   18     | CON ';'
   19     | ID ID ';'
   20     | ';'
   21     | BODY BREAK ';'
   22     | BODY CON ';'

   23 E: ID '=' E
   24  | ID ID '=' E
   25  | E '+' E
   26  | E '-' E
   27  | E '*' E
   28  | E '/' E
   29  | E '+' '+'
   30  | E '-' '-'
   31  | '+' '+' E
   32  | '-' '-' E
   33  | E '%' E
   34  | ID
   35  | E2

   36 E2: E '<' E
   37   | E '>' E
   38   | E LE E
   39   | E GE E
   40   | E EQ E
   41   | E NE E
   42   | E OR E
   43   | E AND E
   44   | NUM


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 33
'(' (40) 2 3 4 5 6
')' (41) 2 3 4 5 6
'*' (42) 27
'+' (43) 25 29 31
'-' (45) 26 30 32
'/' (47) 28
';' (59) 2 3 4 5 6 9 11 12 14 16 17 18 19 20 21 22
'<' (60) 36
'=' (61) 23 24
'>' (62) 37
'{' (123) 7 8
'}' (125) 7 8
error (256)
ID (258) 11 19 23 24 34
NUM (259) 44
FOR (260) 2 3 4 5 6
LE (261) 38
GE (262) 39
EQ (263) 40
NE (264) 41
OR (265) 42
AND (266) 43
CON (267) 18 22
BREAK (268) 17 21


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
S (29)
    on left: 1, on right: 0
ST (30)
    on left: 2 3 4 5 6, on right: 1 10 13 15
DEF (31)
    on left: 7 8 9 10 11 12, on right: 2 3 4 5 6
BODY (32)
    on left: 13 14 15 16 17 18 19 20 21 22, on right: 8 13 14 21 22
E (33)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35, on right: 2 4
    6 9 14 16 23 24 25 26 27 28 29 30 31 32 33 36 37 38 39 40 41 42
    43
E2 (34)
    on left: 36 37 38 39 40 41 42 43 44, on right: 2 5 35


State 0

    0 $accept: . S $end

    FOR  shift, and go to state 1

    S   go to state 2
    ST  go to state 3


State 1

    2 ST: FOR . '(' E ';' E2 ';' E ')' DEF
    3   | FOR . '(' ';' ';' ')' DEF
    4   | FOR . '(' E ';' ';' ')' DEF
    5   | FOR . '(' ';' E2 ';' ')' DEF
    6   | FOR . '(' ';' ';' E ')' DEF

    '('  shift, and go to state 4


State 2

    0 $accept: S . $end

    $end  shift, and go to state 5


State 3

    1 S: ST .

    $default  reduce using rule 1 (S)


State 4

    2 ST: FOR '(' . E ';' E2 ';' E ')' DEF
    3   | FOR '(' . ';' ';' ')' DEF
    4   | FOR '(' . E ';' ';' ')' DEF
    5   | FOR '(' . ';' E2 ';' ')' DEF
    6   | FOR '(' . ';' ';' E ')' DEF

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 10

    E   go to state 11
    E2  go to state 12


State 5

    0 $accept: S $end .

    $default  accept


State 6

   23 E: ID . '=' E
   24  | ID . ID '=' E
   34  | ID .

    ID   shift, and go to state 13
    '='  shift, and go to state 14

    $default  reduce using rule 34 (E)


State 7

   44 E2: NUM .

    $default  reduce using rule 44 (E2)


State 8

   31 E: '+' . '+' E

    '+'  shift, and go to state 15


State 9

   32 E: '-' . '-' E

    '-'  shift, and go to state 16


State 10

    3 ST: FOR '(' ';' . ';' ')' DEF
    5   | FOR '(' ';' . E2 ';' ')' DEF
    6   | FOR '(' ';' . ';' E ')' DEF

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 17

    E   go to state 18
    E2  go to state 19


State 11

    2 ST: FOR '(' E . ';' E2 ';' E ')' DEF
    4   | FOR '(' E . ';' ';' ')' DEF
   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32
    ';'  shift, and go to state 33


State 12

   35 E: E2 .

    $default  reduce using rule 35 (E)


State 13

   24 E: ID ID . '=' E

    '='  shift, and go to state 34


State 14

   23 E: ID '=' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 35
    E2  go to state 12


State 15

   31 E: '+' '+' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 36
    E2  go to state 12


State 16

   32 E: '-' '-' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 37
    E2  go to state 12


State 17

    3 ST: FOR '(' ';' ';' . ')' DEF
    6   | FOR '(' ';' ';' . E ')' DEF

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ')'  shift, and go to state 38

    E   go to state 39
    E2  go to state 12


State 18

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32


State 19

    5 ST: FOR '(' ';' E2 . ';' ')' DEF
   35 E: E2 .

    ';'  shift, and go to state 40

    $default  reduce using rule 35 (E)


State 20

   38 E2: E LE . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 41
    E2  go to state 12


State 21

   39 E2: E GE . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 42
    E2  go to state 12


State 22

   40 E2: E EQ . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 43
    E2  go to state 12


State 23

   41 E2: E NE . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 44
    E2  go to state 12


State 24

   42 E2: E OR . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 45
    E2  go to state 12


State 25

   43 E2: E AND . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 46
    E2  go to state 12


State 26

   37 E2: E '>' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 47
    E2  go to state 12


State 27

   36 E2: E '<' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 48
    E2  go to state 12


State 28

   25 E: E '+' . E
   29  | E '+' . '+'

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 49
    '-'  shift, and go to state 9

    E   go to state 50
    E2  go to state 12


State 29

   26 E: E '-' . E
   30  | E '-' . '-'

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 51

    E   go to state 52
    E2  go to state 12


State 30

   27 E: E '*' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 53
    E2  go to state 12


State 31

   28 E: E '/' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 54
    E2  go to state 12


State 32

   33 E: E '%' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 55
    E2  go to state 12


State 33

    2 ST: FOR '(' E ';' . E2 ';' E ')' DEF
    4   | FOR '(' E ';' . ';' ')' DEF

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 56

    E   go to state 18
    E2  go to state 57


State 34

   24 E: ID ID '=' . E

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 58
    E2  go to state 12


State 35

   23 E: ID '=' E .
   25  | E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 23 (E)


State 36

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   31  | '+' '+' E .
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 31 (E)


State 37

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   32  | '-' '-' E .
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 32 (E)


State 38

    3 ST: FOR '(' ';' ';' ')' . DEF

    ID   shift, and go to state 59
    NUM  shift, and go to state 7
    FOR  shift, and go to state 1
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 60
    '{'  shift, and go to state 61

    ST   go to state 62
    DEF  go to state 63
    E    go to state 64
    E2   go to state 12


State 39

    6 ST: FOR '(' ';' ';' E . ')' DEF
   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32
    ')'  shift, and go to state 65


State 40

    5 ST: FOR '(' ';' E2 ';' . ')' DEF

    ')'  shift, and go to state 66


State 41

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   38   | E LE E .
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 38 (E2)


State 42

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   39   | E GE E .
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 39 (E2)


State 43

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   40   | E EQ E .
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 40 (E2)


State 44

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   41   | E NE E .
   42   | E . OR E
   43   | E . AND E

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 41 (E2)


State 45

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   42   | E OR E .
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 42 (E2)


State 46

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E
   43   | E AND E .

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 43 (E2)


State 47

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   37   | E '>' E .
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 37 (E2)


State 48

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   36   | E '<' E .
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 36 (E2)


State 49

   29 E: E '+' '+' .
   31  | '+' . '+' E

    $default  reduce using rule 29 (E)


State 50

   25 E: E . '+' E
   25  | E '+' E .
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 25 (E)


State 51

   30 E: E '-' '-' .
   32  | '-' . '-' E

    $default  reduce using rule 30 (E)


State 52

   25 E: E . '+' E
   26  | E . '-' E
   26  | E '-' E .
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 26 (E)


State 53

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   27  | E '*' E .
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '%'  shift, and go to state 32

    $default  reduce using rule 27 (E)


State 54

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   28  | E '/' E .
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    '%'  shift, and go to state 32

    $default  reduce using rule 28 (E)


State 55

   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   33  | E '%' E .
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    $default  reduce using rule 33 (E)


State 56

    4 ST: FOR '(' E ';' ';' . ')' DEF

    ')'  shift, and go to state 67


State 57

    2 ST: FOR '(' E ';' E2 . ';' E ')' DEF
   35 E: E2 .

    ';'  shift, and go to state 68

    $default  reduce using rule 35 (E)


State 58

   24 E: ID ID '=' E .
   25  | E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 24 (E)


State 59

   11 DEF: ID . ID ';'
   23 E: ID . '=' E
   24  | ID . ID '=' E
   34  | ID .

    ID   shift, and go to state 69
    '='  shift, and go to state 14

    $default  reduce using rule 34 (E)


State 60

   12 DEF: ';' .

    $default  reduce using rule 12 (DEF)


State 61

    7 DEF: '{' . '}'
    8    | '{' . BODY '}'

    ID     shift, and go to state 70
    NUM    shift, and go to state 7
    FOR    shift, and go to state 1
    CON    shift, and go to state 71
    BREAK  shift, and go to state 72
    '+'    shift, and go to state 8
    '-'    shift, and go to state 9
    ';'    shift, and go to state 73
    '}'    shift, and go to state 74

    ST    go to state 75
    BODY  go to state 76
    E     go to state 77
    E2    go to state 12


State 62

   10 DEF: ST .

    $default  reduce using rule 10 (DEF)


State 63

    3 ST: FOR '(' ';' ';' ')' DEF .

    $default  reduce using rule 3 (ST)


State 64

    9 DEF: E . ';'
   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32
    ';'  shift, and go to state 78


State 65

    6 ST: FOR '(' ';' ';' E ')' . DEF

    ID   shift, and go to state 59
    NUM  shift, and go to state 7
    FOR  shift, and go to state 1
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 60
    '{'  shift, and go to state 61

    ST   go to state 62
    DEF  go to state 79
    E    go to state 64
    E2   go to state 12


State 66

    5 ST: FOR '(' ';' E2 ';' ')' . DEF

    ID   shift, and go to state 59
    NUM  shift, and go to state 7
    FOR  shift, and go to state 1
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 60
    '{'  shift, and go to state 61

    ST   go to state 62
    DEF  go to state 80
    E    go to state 64
    E2   go to state 12


State 67

    4 ST: FOR '(' E ';' ';' ')' . DEF

    ID   shift, and go to state 59
    NUM  shift, and go to state 7
    FOR  shift, and go to state 1
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 60
    '{'  shift, and go to state 61

    ST   go to state 62
    DEF  go to state 81
    E    go to state 64
    E2   go to state 12


State 68

    2 ST: FOR '(' E ';' E2 ';' . E ')' DEF

    ID   shift, and go to state 6
    NUM  shift, and go to state 7
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9

    E   go to state 82
    E2  go to state 12


State 69

   11 DEF: ID ID . ';'
   24 E: ID ID . '=' E

    '='  shift, and go to state 34
    ';'  shift, and go to state 83


State 70

   19 BODY: ID . ID ';'
   23 E: ID . '=' E
   24  | ID . ID '=' E
   34  | ID .

    ID   shift, and go to state 84
    '='  shift, and go to state 14

    $default  reduce using rule 34 (E)


State 71

   18 BODY: CON . ';'

    ';'  shift, and go to state 85


State 72

   17 BODY: BREAK . ';'

    ';'  shift, and go to state 86


State 73

   20 BODY: ';' .

    $default  reduce using rule 20 (BODY)


State 74

    7 DEF: '{' '}' .

    $default  reduce using rule 7 (DEF)


State 75

   15 BODY: ST .

    $default  reduce using rule 15 (BODY)


State 76

    8 DEF: '{' BODY . '}'
   13 BODY: BODY . ST
   14     | BODY . E ';'
   21     | BODY . BREAK ';'
   22     | BODY . CON ';'

    ID     shift, and go to state 6
    NUM    shift, and go to state 7
    FOR    shift, and go to state 1
    CON    shift, and go to state 87
    BREAK  shift, and go to state 88
    '+'    shift, and go to state 8
    '-'    shift, and go to state 9
    '}'    shift, and go to state 89

    ST  go to state 90
    E   go to state 91
    E2  go to state 12


State 77

   16 BODY: E . ';'
   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32
    ';'  shift, and go to state 92


State 78

    9 DEF: E ';' .

    $default  reduce using rule 9 (DEF)


State 79

    6 ST: FOR '(' ';' ';' E ')' DEF .

    $default  reduce using rule 6 (ST)


State 80

    5 ST: FOR '(' ';' E2 ';' ')' DEF .

    $default  reduce using rule 5 (ST)


State 81

    4 ST: FOR '(' E ';' ';' ')' DEF .

    $default  reduce using rule 4 (ST)


State 82

    2 ST: FOR '(' E ';' E2 ';' E . ')' DEF
   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32
    ')'  shift, and go to state 93


State 83

   11 DEF: ID ID ';' .

    $default  reduce using rule 11 (DEF)


State 84

   19 BODY: ID ID . ';'
   24 E: ID ID . '=' E

    '='  shift, and go to state 34
    ';'  shift, and go to state 94


State 85

   18 BODY: CON ';' .

    $default  reduce using rule 18 (BODY)


State 86

   17 BODY: BREAK ';' .

    $default  reduce using rule 17 (BODY)


State 87

   22 BODY: BODY CON . ';'

    ';'  shift, and go to state 95


State 88

   21 BODY: BODY BREAK . ';'

    ';'  shift, and go to state 96


State 89

    8 DEF: '{' BODY '}' .

    $default  reduce using rule 8 (DEF)


State 90

   13 BODY: BODY ST .

    $default  reduce using rule 13 (BODY)


State 91

   14 BODY: BODY E . ';'
   25 E: E . '+' E
   26  | E . '-' E
   27  | E . '*' E
   28  | E . '/' E
   29  | E . '+' '+'
   30  | E . '-' '-'
   33  | E . '%' E
   36 E2: E . '<' E
   37   | E . '>' E
   38   | E . LE E
   39   | E . GE E
   40   | E . EQ E
   41   | E . NE E
   42   | E . OR E
   43   | E . AND E

    LE   shift, and go to state 20
    GE   shift, and go to state 21
    EQ   shift, and go to state 22
    NE   shift, and go to state 23
    OR   shift, and go to state 24
    AND  shift, and go to state 25
    '>'  shift, and go to state 26
    '<'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32
    ';'  shift, and go to state 97


State 92

   16 BODY: E ';' .

    $default  reduce using rule 16 (BODY)


State 93

    2 ST: FOR '(' E ';' E2 ';' E ')' . DEF

    ID   shift, and go to state 59
    NUM  shift, and go to state 7
    FOR  shift, and go to state 1
    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ';'  shift, and go to state 60
    '{'  shift, and go to state 61

    ST   go to state 62
    DEF  go to state 98
    E    go to state 64
    E2   go to state 12


State 94

   19 BODY: ID ID ';' .

    $default  reduce using rule 19 (BODY)


State 95

   22 BODY: BODY CON ';' .

    $default  reduce using rule 22 (BODY)


State 96

   21 BODY: BODY BREAK ';' .

    $default  reduce using rule 21 (BODY)


State 97

   14 BODY: BODY E ';' .

    $default  reduce using rule 14 (BODY)


State 98

    2 ST: FOR '(' E ';' E2 ';' E ')' DEF .

    $default  reduce using rule 2 (ST)
